# DialX

./: bot.py  main.py  prompt_data.py  pyproject.toml  server_utils.py  transcript.txt
files/: EXCEL.xlsx
services/: bot.py
